fix: fix mouse and stroke alignment

--- a/blueprint/frontend/src/drawing.css
+++ b/blueprint/frontend/src/drawing.css
@@ -26,7 +26,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .overlay {
